AB-1085 plp page tile gap issue

--- a/styles/static/content/cooking-guides.scss
+++ b/styles/static/content/cooking-guides.scss
@@ -24,7 +24,12 @@
         line-height: 0;
         font-size: 0;
         color: transparent;
-        height: 100%;
+        // height: 100%;
+    }
+    .cooking-guide-card {
+        .product-image {
+            height: 100%;
+        }
     }
 // }
 
